unpackaged/main/default/objects/Struck_Booths__c/Struck_Booths__c.object-meta.xml
<CustomObject>
    <label>Struck Booth</label>
    <nameField>
        <label>Struck Booths Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Struck Booths</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>