unpackaged/main/default/objects/Struck_Booths__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Struck Booths</relationshipLabel>
    <relationshipName>Struck_Booths</relationshipName>
    <type>Lookup</type>
</CustomField>