unpackaged/main/default/objects/Struck_Booths__c/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <label>Customer Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>