unpackaged/main/default/objects/Struck_Booths__c/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <label>Customer Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>