unpackaged/main/default/objects/Struck_Booths__c/fields/Opportunity_Public__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Public__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Public</label>
    <referenceTo>Show_Occurrence_Public__c</referenceTo>
    <relationshipLabel>Struck Booths</relationshipLabel>
    <relationshipName>Struck_Booths</relationshipName>
    <type>Lookup</type>
</CustomField>